k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-nest
  labels:
    app.kubernetes.io/name: nest-redis
    app.kubernetes.io/part-of: devops-test
